--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl_phone_field: ^3.2.0
   firebase_core: 3.12.0
+  firebase_database: 11.3.3
+  cloud_firestore: 5.6.4
 
 dev_dependencies:
   flutter_test:
