--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_database: 11.3.3
   cloud_firestore: 5.6.4
   auto_route: ^10.0.0
+  flutter_bloc: ^9.0.0
 
 dev_dependencies:
   flutter_test:
