--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cloud_firestore: 5.6.4
   auto_route: ^10.0.0
   flutter_bloc: ^9.0.0
+  bloc: 9.0.0
 
 dev_dependencies:
   flutter_test:
